# glmat

./: .gitignore  glmat.cabal
src/Graphics/Math/: GLMat.hs  GLMatrix.hs  GLUniformMatrix.hs  GLVector.hs
test/: GLMatrixProps.hs  GLMatrixTests.hs  GLVectorProps.hs  GLVectorTests.hs  TestMain.hs  UnitTests.hs
