name:                glmat
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          kosmoskatten.software@gmai.com
-- copyright:           
category:            Graphics
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  -- exposed-modules:     
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite glmat-tests
  type:               exitcode-stdio-1.0
  main-is:            TestMain.hs
  build-depends:      base >=4.7 && <4.8
                      , test-framework >= 0.8
                      , test-framework-hunit >= 0.3
                      , HUnit >= 1.2.5
  hs-source-dirs:     src, test
  default-language:   Haskell2010
  ghc-options:        -Wall