name:                glmat
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          kosmoskatten.software@gmai.com
-- copyright:           
category:            Graphics
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Graphics.Math.GLMat
  other-modules:       Graphics.Math.GLMatrix
                       , Graphics.Math.GLVector
--                       , Graphics.Math.GLUniformMatrix
  build-depends:       base >=4.7 && <4.8
  --                     , OpenGL >= 2.9
  --                     , OpenGLRaw >= 1.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -funbox-strict-fields

test-suite glmat-tests
  type:               exitcode-stdio-1.0
  main-is:            TestMain.hs
  other-modules:      GLVectorTests
                      , GLVectorProps
                      , GLMatrixTests
                      , GLMatrixProps
  build-depends:      base >=4.7 && <4.8
--                      , OpenGL >= 2.9
--                      , OpenGLRaw >= 1.5
                      , test-framework >= 0.8
                      , test-framework-hunit >= 0.3
                      , test-framework-quickcheck2 >= 0.3
                      , HUnit >= 1.2.5
                      , QuickCheck >= 2.7
  hs-source-dirs:     src, test
  default-language:   Haskell2010
  ghc-options:        -Wall -fno-warn-orphans